--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,4 @@
 bc:
-	clang++ -c -emit-llvm sum.cpp -o sum.bc
+	clang++ -c -emit-llvm easy.cpp -o easy.bc
 ll:
-	clang++ -S -emit-llvm sum.cpp -o sum.ll
+	clang++ -S -emit-llvm easy.cpp -o easy.ll
